--- a/assets/styles/page/_style-page.scss
+++ b/assets/styles/page/_style-page.scss
@@ -47,18 +47,40 @@ body {
                 position: absolute;
                 top: 1.4rem;
                 left: 2rem;
+                appearance: none;
                 background-color: transparent;
-                border: 1px solid var(--light-checkbox-divider);
-                // appearance: none;
                 width: 2rem;
                 height: 2rem;
+                border: 1px solid var(--light-checkbox-divider);
                 border-radius: 50%;
                 margin: unset;
                 padding: unset;
+                outline: none;
+                cursor: pointer;
 
-                // &::before {
-                //     content: "";
-                // }
+                &:checked {
+                    // content: "";
+                    // position: absolute;
+                    // width: 2.2rem;
+                    // height: 2.2rem;
+                    // border-radius: 50%;
+                    background: url(../images/icon-check.svg), linear-gradient(var(--checked-hover));
+                    background-repeat: no-repeat;
+                    background-position: center;
+                }
+
+                &::after {
+                    content: "";
+                    position: absolute;
+                    width: 2.2rem;
+                    height: 2.2rem;
+                    border-radius: 50%;
+                    display: none;
+                }
+
+                &:checked::before{
+                    display: none;
+                }
             }
 
             .to-do__input {
