--- a/assets/styles/page/_style-page.scss
+++ b/assets/styles/page/_style-page.scss
@@ -52,7 +52,8 @@ body {
                 background-color: transparent;
                 width: 2rem;
                 height: 2rem;
-                border: 1px solid var(--border-divider);
+                border: 1px solid var(--
+                border-divider);
                 border-radius: 50%;
                 margin: unset;
                 padding: unset;
