--- a/assets/styles/page/_style-page.scss
+++ b/assets/styles/page/_style-page.scss
@@ -46,7 +46,7 @@ body {
 
     .to-do {
 
-        .to-do__new {
+        .to-do__form {
             position: relative;
             width: 100%;
 
@@ -109,7 +109,7 @@ body {
             align-items: center;
             padding: 1.6rem 2rem;
 
-            .to-do__button {
+            .to-do__complete {
                 appearance: none;
                 background-color: transparent;
                 min-width: 2rem;
