--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -16,7 +16,7 @@
   --dark-border-divider: hsl(237, 14%, 26%);
   --dark-text-task: hsl(234, 39%, 85%);
   --dark-text-hover: hsl(236, 33%, 92%);
-  --dark-text-complete: hsl(233, 11%, 84%);
+  --dark-text-complete: hsl(233, 14%, 35%);
   --dark-text-placeholder: hsl(234, 11%, 52%);
   --dark-text-tools: hsl(234, 11%, 52%);
   --light-background: hsl(0, 0%, 98%);
@@ -65,7 +65,7 @@ html {
   --dark-border-divider: hsl(237, 14%, 26%);
   --dark-text-task: hsl(234, 39%, 85%);
   --dark-text-hover: hsl(236, 33%, 92%);
-  --dark-text-complete: hsl(233, 11%, 84%);
+  --dark-text-complete: hsl(233, 14%, 35%);
   --dark-text-placeholder: hsl(234, 11%, 52%);
   --dark-text-tools: hsl(234, 11%, 52%);
   --light-background: hsl(0, 0%, 98%);
@@ -212,6 +212,10 @@ body .to-do__list .to-do__item .to-do__complete:not(:checked):hover {
   background-origin: border-box;
   background-clip: content-box, border-box;
   display: inline-block;
+}
+body .to-do__list .to-do__item .to-do__complete:checked + .to-do__task {
+  text-decoration: line-through;
+  color: var(--text-complete);
 }
 body .to-do__list .to-do__item .to-do__task {
   color: var(--text-task);
