--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
 :root {
   --bright-blue: hsl(220, 98%, 61%);
   --checked-hover: 45deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%);
@@ -306,4 +307,98 @@ body footer h3 {
   letter-spacing: -0.0175em;
   text-align: center;
   margin: 4.3rem auto 6.9rem;
+}
+
+:root {
+  --bright-blue: hsl(220, 98%, 61%);
+  --checked-hover: 45deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%);
+  --background: var(--dark-background);
+  --background-to-do-list: var(--dark-background-to-do-list);
+  --border-divider: var(--dark-border-divider);
+  --text-task: var(--dark-text-task);
+  --text-hover: var(--dark-text-hover);
+  --text-complete: var(--dark-text-complete);
+  --text-placeholder: var(--dark-text-placeholder);
+  --text-tools: var(--dark-text-tools);
+  --dark-background: hsl(235, 21%, 11%);
+  --dark-background-to-do-list: hsl(235, 24%, 19%);
+  --dark-border-divider: hsl(237, 14%, 26%);
+  --dark-text-task: hsl(234, 39%, 85%);
+  --dark-text-hover: hsl(236, 33%, 92%);
+  --dark-text-complete: hsl(233, 14%, 35%);
+  --dark-text-placeholder: hsl(234, 11%, 52%);
+  --dark-text-tools: hsl(234, 11%, 52%);
+  --light-background: hsl(0, 0%, 98%);
+  --light-background-to-do-list: hsl(0, 0%, 98%);
+  --light-border-divider: hsl(236, 33%, 92%);
+  --light-text-task: hsl(235, 19%, 35%);
+  --light-text-complete: hsl(233, 11%, 84%);
+  --light-text-placeholder: hsl(236, 9%, 61%);
+  --light-text-tools: hsl(236, 9%, 61%);
+}
+
+@media only screen and (min-width: 1400px) {
+  body {
+    padding: 7.8rem 45rem 5rem;
+  }
+  body.light-mode::before {
+    background: url(../images/bg-desktop-light.jpg) no-repeat;
+  }
+  body::before {
+    background: url(../images/bg-desktop-dark.jpg) no-repeat;
+  }
+  body header {
+    margin-bottom: 4rem;
+  }
+  body header .title {
+    font-size: 4rem;
+  }
+  body .to-do .to-do__form .to-do__task-send {
+    width: 2.4rem;
+    height: 2.4rem;
+    top: 2rem;
+    left: 2.4rem;
+  }
+  body .to-do .to-do__form .to-do__input {
+    font-size: 1.8rem;
+    height: 6.4rem;
+    letter-spacing: 0.01em;
+    padding: 2.4rem 7rem;
+  }
+  body .to-do .to-do__list .to-do__item .to-do__complete {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
+  body .to-do .to-do__list .to-do__item .to-do__complete:checked {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
+  body .to-do .to-do__list .to-do__item .to-do__task {
+    font-size: 1.8rem;
+    padding: 0 2.4rem 0 2.2rem;
+  }
+  body .to-do .to-do__list .to-do__item .to-do__task:hover + .to-do__delete {
+    display: block;
+  }
+  body .to-do .to-do__list .to-do__item .to-do__delete {
+    display: none;
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+  body .to-do .to-do__list .to-do__item .to-do__delete .to-do__delete--icon {
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+  body .to-do .to-do__tools {
+    position: relative;
+  }
+  body .to-do .to-do__tools .tools__set-two {
+    position: absolute;
+    top: 0;
+    left: calc(50% - 8.2875rem);
+    background-color: transparent;
+    width: 16.575rem;
+    border: none;
+    box-shadow: none;
+  }
 }/*# sourceMappingURL=style.css.map */
