--- a/assets/styles/abstract/_root.scss
+++ b/assets/styles/abstract/_root.scss
@@ -13,6 +13,9 @@ $default-font: 'Josefin Sans', sans-serif;
 $title: 2.7rem;
 $task: 1.2rem;
 $filter: 1.4rem;
+// Desktop
+$title-desktop: 4rem;
+$task-desktop: 1.8rem;
 
 // Font-weights
 $w4: 400;
