--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -83,19 +83,23 @@ body {
   background: var(--background);
   width: 100vw;
   height: 100vh;
-  padding: 4.8rem 2.4rem 6.9rem 2.4rem;
+  padding: 4.8rem 6.4% 6.9rem;
 }
 body.light-mode::before {
-  background: url(../images/bg-mobile-light.jpg) no-repeat;
+  background: url(../images/bg-mobile-light.jpg) no-repeat center top;
+  background-size: 100%;
+  max-height: 20rem;
 }
 body::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
-  background: url(../images/bg-mobile-dark.jpg) no-repeat;
+  background: url(../images/bg-mobile-dark.jpg) no-repeat center top;
+  background-size: 100%;
   width: 100%;
   height: 100%;
+  max-height: 20rem;
   z-index: -1;
 }
 body header {
@@ -109,12 +113,17 @@ body header .title {
   letter-spacing: 0.37em;
   font-weight: 700;
   text-transform: uppercase;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  cursor: pointer;
 }
 body header .thema__switch {
   background-color: transparent;
   border: none;
   width: -moz-fit-content;
   width: fit-content;
+  cursor: pointer;
 }
 body header .thema__switch .thema__icon {
   width: 2rem;
@@ -339,13 +348,17 @@ body footer h3 {
 
 @media only screen and (min-width: 1400px) {
   body {
-    padding: 7.8rem 45rem 5rem;
+    padding: 7.8rem 31.25% 5rem;
   }
   body.light-mode::before {
-    background: url(../images/bg-desktop-light.jpg) no-repeat;
+    background: url(../images/bg-desktop-light.jpg) no-repeat center top;
+    background-size: 100%;
+    max-height: 30rem;
   }
   body::before {
-    background: url(../images/bg-desktop-dark.jpg) no-repeat;
+    background: url(../images/bg-desktop-dark.jpg) no-repeat center top;
+    background-size: 100%;
+    max-height: 40rem;
   }
   body header {
     margin-bottom: 4rem;
@@ -365,6 +378,9 @@ body footer h3 {
     letter-spacing: 0.01em;
     padding: 2.4rem 7rem;
   }
+  body .to-do .to-do__list .to-do__item {
+    padding: 2.4rem 2.4rem 2.2rem;
+  }
   body .to-do .to-do__list .to-do__item .to-do__complete {
     width: 2.4rem;
     height: 2.4rem;
@@ -375,7 +391,6 @@ body footer h3 {
   }
   body .to-do .to-do__list .to-do__item .to-do__task {
     font-size: 1.8rem;
-    padding: 0 2.4rem 0 2.2rem;
   }
   body .to-do .to-do__list .to-do__item .to-do__task:hover + .to-do__delete {
     display: block;
