--- a/assets/styles/page/_style-page.scss
+++ b/assets/styles/page/_style-page.scss
@@ -5,10 +5,12 @@ body {
     background: var(--background);
     width: 100vw;
     height: 100vh;
-    padding: 4.8rem 2.4rem 6.9rem 2.4rem;
+    padding: 4.8rem 6.4% 6.9rem;
 
     &.light-mode::before {
-        background: url(../images/bg-mobile-light.jpg) no-repeat;
+        background: url(../images/bg-mobile-light.jpg) no-repeat center top;
+        background-size: 100%;
+        max-height: 20rem;
     }
 
     &::before {
@@ -16,9 +18,11 @@ body {
         position: absolute;
         top: 0;
         left: 0;
-        background: url(../images/bg-mobile-dark.jpg) no-repeat;
+        background: url(../images/bg-mobile-dark.jpg) no-repeat center top;
+        background-size: 100%;
         width: 100%;
         height: 100%;
+        max-height: 20rem;
         z-index: -1;
     }
 
@@ -30,13 +34,16 @@ body {
         .title {
             @include text (white, $title, 0.37em);
             font-weight: $w7;
-            text-transform: uppercase
+            text-transform: uppercase;
+            user-select: none;
+            cursor: pointer;
         }
 
         .thema__switch {
             background-color: transparent;
             border: none;
             width: fit-content;
+            cursor: pointer;
 
             .thema__icon {
                 width: 2rem;
