--- a/assets/styles/responsive/_responsive.scss
+++ b/assets/styles/responsive/_responsive.scss
@@ -28,8 +28,8 @@
         .to-do {
             .to-do__form {
                 .to-do__task-send {
-                    width: 2.4rem;
-                    height: 2.4rem;
+                    width: 2.6rem;
+                    height: 2.6rem;
                     top: 2rem;
                     left: 2.4rem;
                 }
@@ -38,26 +38,32 @@
                     font-size: $task-desktop;
                     height: 6.4rem;
                     letter-spacing: 0.01em;
-                    padding: 2.4rem 7rem;
+                    padding: 2.4rem 7rem 2.2rem;
+                    margin-bottom: 2.4rem;
                 }
             }
 
             .to-do__list {
                 .to-do__item {
-                    padding: 2.4rem 2.4rem 2.2rem;
+                    padding: 1.9rem 2.2rem 1.7rem;
 
                     .to-do__complete {
-                        width: 2.4rem;
-                        height: 2.4rem;
+                        min-width: 2.6rem;
+                        min-height: 2.6rem;
+                        max-width: 2.6rem;
+                        max-height: 2.6rem;
 
                         &:checked {
-                            width: 2.4rem;
-                            height: 2.4rem;
+                            min-width: 2.6rem;
+                            min-height: 2.6rem;
+                            max-width: 2.6rem;
+                            max-height: 2.6rem;
                         }
                     }
 
                     .to-do__task {
                         font-size: $task-desktop;
+                        padding: 0 0 0 2.3rem;
 
                         &:hover+.to-do__delete {
                             display: block;
@@ -82,6 +88,11 @@
             .to-do__tools {
                 position: relative;
 
+                .tools__set-one{
+                    margin-bottom: unset;
+                    padding: 1.8rem 2.4rem 1.7rem;
+                }
+
                 .tools__set-two {
                     position: absolute;
                     top: 0;
@@ -92,6 +103,12 @@
                     box-shadow: none;
                 }
             }
+        }
+    }
+
+    footer{
+        h2{
+            margin: 5.2 auto 0;
         }
     }
 }
