--- a/assets/styles/page/_style-page.scss
+++ b/assets/styles/page/_style-page.scss
@@ -3,8 +3,8 @@
 body {
     position: relative;
     background: var(--background);
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 4.8rem 6.4% 6.9rem;
 
     &.light-mode::before {
@@ -115,7 +115,7 @@ body {
             justify-content: space-between;
             border-bottom: 2px solid var(--border-divider);
             align-items: center;
-            padding: 1.6rem 2rem;
+            padding: 1.6rem 2rem 1.4rem;
 
             .to-do__complete {
                 appearance: none;
@@ -200,7 +200,7 @@ body {
             border-bottom-left-radius: .6rem;
             border-bottom-right-radius: .6rem;
             box-shadow: 0 2.4rem 2.4rem .4rem hsla(0, 0%, 0%, 0.1);
-            padding: 1.8rem 2rem 2rem;
+            padding: 1.7rem 2rem;
             margin-bottom: 1.6rem;
 
             .tools__task-count {
@@ -212,6 +212,7 @@ body {
                 background-color: transparent;
                 border: none;
                 @include text (var(--text-tools), $task, -0.015em);
+                padding: unset;
                 cursor: pointer;
 
                 &:hover {
@@ -226,7 +227,7 @@ body {
             background-color: var(--background-to-do-list);
             border: none;
             border-radius: .6rem;
-            padding: 1.8rem 0;
+            padding: 1.6rem 0;
             box-shadow: 0 .4rem 2.4rem .4rem hsla(0, 0%, 0%, 0.1);
 
             .tools__filter {
@@ -252,10 +253,10 @@ body {
 
     footer {
 
-        h3 {
+        h2 {
             @include text (var(--text-tools), $filter, -0.0175em);
             text-align: center;
-            margin: 4.3rem auto 6.9rem;
+            margin: 4.3rem auto 0;
         }
     }
 
